test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  labels:
    app: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: test
        image: kind-game:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 443
        readinessProbe:
          httpGet: {path: /api/state, port: 443}
        livenessProbe:
          httpGet: {path: /api/state, port: 443}
