test/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
  labels:
    app: test
spec:
  selector:
    app: test
  ports:
  - port: 443
    targetPort: 443
  type: ClusterIP
